--- a/style.css
+++ b/style.css
@@ -4,85 +4,109 @@
   box-sizing: border-box;
 }
 
-.container {
-  width: 80%;
-  min-height: 100vh;
-  border: 2px solid red;
-  margin: 0 auto;
-}
-
 body {
   font-family: "Montserrat", Arial, sans-serif;
 }
 
+.container {
+  min-height: 100vh;
+  width: 80%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 h1 {
   text-align: center;
-  margin: 30px;
+  margin: 3rem 0;
 }
 
 .search-box {
+  position: relative;
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+  width: 70%;
+  max-width: 400px;
 }
 
 .search-input {
   font-size: 16px;
-  background: #fff;
-  padding: 6px 10px;
   border: 1px solid #a6a6a6;
   border-radius: 20px;
   outline: none;
+  padding: 6px 18px;
+  width: 100%;
+}
+.clear-button {
+  position: absolute;
+  display: none;
+  padding: 6px;
+  width: 30px;
+  height: 30px;
+  right: 6px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 .filter {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
 }
 
 .filter-btn {
   margin: 0 6px;
-  padding: 3px 6px;
+  padding: 4px 12px;
   background-color: #fff;
   border: 1px solid #a6a6a6;
-  border-radius: 4px;
+  border-radius: 30px;
+  font-size: 15px;
   cursor: pointer;
 }
 
-.filter-btn.active {
-  background-color: #a6a6a6;
-  color: #fff;
+.filter-btn:hover {
+  box-shadow: 0 4px 2px rgba(41, 1, 1, 0.1);
 }
 
-.card-wrapper {
+.filter-btn.active {
+  color: white;
+  background-color: #a6a6a6;
+}
+
+.cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
+  grid-template-columns: repeat(3, minmax(150px, 1fr));
+  grid-gap: 15px;
+  margin-bottom: 1rem;
 }
 
 .card {
   width: 100%;
-  border: 1px solid black;
+  border: 1px solid #a6a6a6;
   border-radius: 10px;
   overflow: hidden;
 }
 
-img.card-img {
+.card-info {
+  padding: 10px 15px;
+}
+
+.card-info .badge {
+  display: inline-block;
+  padding: 6px;
+  font-size: 12px;
+  border: 1px solid #a6a6a6;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+img.card-image {
   width: 100%;
   height: 200px;
   object-fit: cover;
-}
-
-.card-info {
-  padding: 10px;
-}
-
-.badge {
-  display: inline-block;
-  border: 1px solid #a6a6a6;
-  border-radius: 5px;
-  font-size: 12px;
-  padding: 5px 10px;
-  margin-bottom: 10px;
 }
